@@ -1,3 +1,8 @@
+2005-07-18  Werner Koch  <wk@g10code.com>
+
+	* scrutmime.c (parse_message): Cope with aditional Exim generated
+	info lines.
+
 2005-07-13  Werner Koch  <wk@g10code.com>
 
 	* scrutmime.c (parse_message): Add a kludge to allow parsing
